# dpo-tuning

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: eval_model.ipynb  lora_sft.ipynb
scripts/: eval-benchmark.py
src/: settings.py
utils/: generate.py  measure_resource.py
