[tool.poetry]
name = "dpo-tuning"
version = "0.1.0"
description = ""
authors = ["shun31y <shun.kato@elyza.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
transformers = "^4.41.1"
peft = "^0.11.1"
accelerate = "^0.30.1"
bitsandbytes = "^0.43.1"
trl = "^0.8.6"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
jupyter = "^1.0.0"
openai = "^1.30.5"
tenacity = "^8.3.0"
python-dotenv = "^1.0.1"
fire = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
